--- a/projects/aas-portal/src/app/main/main.component.html
+++ b/projects/aas-portal/src/app/main/main.component.html
@@ -45,6 +45,10 @@
     </div>
     <div class="fhg-main-statusbar d-flex flex-row-reverse p-2">
         <div class="ts-x-small">© 2024 Fraunhofer IOSB-INA - AASPortal (v{{version()}})</div>
+        @if (count() > 0) {
+        <span class="badge rounded-pill text-bg-info mx-2" (click)="clear()" tabindex="-1"
+            (keydown)="onKeyDown($event)">{{summary()}}</span>
+        }
     </div>
 </div>
 
