--- a/projects/aas-portal/src/app/aas/aas.component.scss
+++ b/projects/aas-portal/src/app/aas/aas.component.scss
@@ -10,9 +10,10 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     grid-template-rows: auto 1fr;
-    grid-template-areas: "header header" "document properties";
+    grid-template-areas: "header" "document";
+    grid-gap: 8px 8px;
  }
 
  .fhg-aas-header {
@@ -24,8 +25,3 @@
     grid-area: document;
     overflow: auto;
  }
-
- .fhg-aas-properties {
-    grid-area: properties;
-    overflow: auto;
-}
