--- a/projects/aas-portal/src/app/dashboard/dashboard.component.html
+++ b/projects/aas-portal/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
  !
  !---------------------------------------------------------------------------->
 
-<div id="fhg-dashboard-container" class="overflow-auto h-100">
+<div id="fhg-dashboard-container" class="overflow-y-auto container-fluid h-100">
     @if (!isEmpty()) {
     @for (row of rows(); track row) {
     <div class="row">
