fix: some updates

--- a/projects/aas-lib/src/lib/library-table/library-table.component.html
+++ b/projects/aas-lib/src/lib/library-table/library-table.component.html
@@ -23,8 +23,7 @@
         <td [noWrap]="true">
           @if (library.homepage) {
             <a target="_blank" [href]="library.homepage">{{library.name}}</a>
-          }
-          @if (!library.homepage) {
+          } @else {
             <div class="text-nowrap">{{library.name}}</div>
           }
         </td>
