--- a/projects/aas-portal/src/app/about/about.component.html
+++ b/projects/aas-portal/src/app/about/about.component.html
@@ -18,7 +18,7 @@ zur Foerderung der angewandten Forschung e.V.</p>
     <h2>Third-party Libraries</h2>
     <p>The application is based on some third-party libraries for which specific copyright statements and licenses
         apply.</p>
-    <fhg-library-table [collection]="libraries()"></fhg-library-table>
+    <fhg-library-table [libraries]="libraries()"></fhg-library-table>
     <h2>Server Messages</h2>
     <fhg-message-table [collection]="messages()"></fhg-message-table>
 </div>
