fix: AASTreeComponent expand all

--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -15,9 +15,15 @@
                     [disabled]="state() === 'online'" [indeterminate]="someSelected()" [checked]="everySelected()">
             </th>
             <th>
+                @if (expanded()) {
                 <a class="link-secondary" href="javascript:void(0);" (click)="collapse()">
                     <i class="bi bi-dash-square-dotted"></i>
                 </a>
+            } @else {
+                <a class="link-secondary" href="javascript:void(0);" (click)="expand()">
+                    <i class="bi bi-plus-square-dotted"></i>
+                </a>
+            }
             </th>
             <th></th>
         </tr>
